plugins {
	id 'java'
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group
sourceSets {
	main {
		ext.refMap = "${modid}.refmap.json"
	}
}
loom {
	mixin {
		//useLegacyMixinAp = true
		useLegacyMixinAp = false
		defaultRefmapName = "${modid}.refmap.json"
	}

	runs {
		configureEach {
			hasProperty("enable-preview")
			property("mixin.debug.export", "true")
		}
	}
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	mavenCentral()
	//maven {
	//	url "https://repo.spongepowered.org/maven"
	//}
}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	//implementation "org.spongepowered:mixin:0.8.7"
	//annotationProcessor "org.spongepowered:mixin:0.8.7:processor"
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 26
}
tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['--enable-preview']
}
tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << "--enable-preview"
}
tasks.withType(JavaExec).configureEach {
	jvmArgs += '--enable-preview'
}
java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility <= JavaVersion.VERSION_26
	targetCompatibility <= JavaVersion.VERSION_26
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

def void expand(LinkedHashMap<String, Object> stringObjectLinkedHashMap) {}